[project]
name = "docflow-api"
version = "1.0.0"
description = "Async document processing backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.0",
	"sqlalchemy[asyncio]>=2.0.30",
	"alembic>=1.13.0",
	"psycopg[binary]>=3.1.0",
	"asyncpg>=0.29.0",
	"celery[redis]>=5.4.0",
	"redis>=5.0.0",
	"python-multipart>=0.0.9",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.0",
	"python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.23.0",
	"aiosqlite>=0.20.0",
	"httpx>=0.27.0",
	"factory-boy>=3.3.0",
	"ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
